--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <div class="page-wrapper">
             <header>
-                <nav>
-                <ul>
-                    <li><a class="navlogo" href="index.html" title="company logo"></a></li>
+                <nav class="row">
+                <ul class="row">
+                    <li><a class="navlogo" href="index.html" aria-label="company logo"></a></li>
                     <li>
                         <a href="models.html"aria-haspopup="true">MODELS</a>
                         <ul class="dropdown" aria-label="submenu">
