--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
                 <a class="navlogo img" href="index.html" aria-label="company logo"></a>
                 <ul class="row">
                     <li>
-                        <a aria-haspopup="true">MODELS</a>
+                        <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
                             <li><a href="#">Nemesis</a></li>
                             <li><a href="#">Black Widow</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a aria-haspopup="true">ABOUT US</a>
+                        <button aria-haspopup="true" class="no-button">ABOUT US</button>
                         <ul class="dropdown" aria-label="submenu">
                             <li><a href="#">Our Story</a></li>
                             <li><a href="#">Press</a></li>
@@ -26,7 +26,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a aria-haspopup="true">CUSTOMIZE</a>
+                        <button aria-haspopup="true" class="no-button">CUSTOMIZE</button>
                         <ul class="dropdown" aria-label="submenu">
                             <li><a href="#">Nemesis</a></li>
                             <li><a href="#">Black Widow</a></li>
@@ -83,32 +83,32 @@
                             <input type="text" id="l-name" placeholder="LAST NAME">
                         </div>
                         <div>
-                            <label for="email">EMAIL</label>
-                            <input type="text" id="email" placeholder="EMAIL">
+                            <label for="email">EMAIL*</label>
+                            <input type="text" id="email" placeholder="EMAIL" required>
                         </div>
                         <div>
                             <label for="phone">PHONE</label>
                             <input type="text" id="phone" placeholder="PHONE">
                         </div>
                         <div>
-                            <label for="message">MESSAGE</label>
-                            <textarea id="message" placeholder="MESSAGE"></textarea>
+                            <label for="message">MESSAGE*</label>
+                            <textarea id="message" placeholder="MESSAGE" required></textarea>
                         </div>
-                        <button type="submit">SUBMIT</button>
+                        <button type="submit" class="button">SUBMIT</button>
                     </form>
                 </section>
-                <ul id="connections" class="row">
-                    <a href=""><img src="pics/facebook-icon.svg" alt=""></a>
-                    <a href=""><img src="pics/instagram-icon.svg" alt=""></a>
-                    <a href=""><img src="pics/linkedin-icon.svg" alt=""></a>
-                    <a href=""><img src="pics/youtube-icon.svg" alt=""></a>
-                    <a href=""><img src="pics/tiktok-icon.svg" alt=""></a>
-                    <a href=""><img src="pics/x-icon.svg" alt=""></a>
-                    <a href=""><img src="pics/twitch-icon.svg" alt=""></a>
-                </ul>
             </div>
+            <ul id="connections" class="row">
+                <a href=""><img src="pics/facebook-icon.svg" alt=""></a>
+                <a href=""><img src="pics/instagram-icon.svg" alt=""></a>
+                <a href=""><img src="pics/linkedin-icon.svg" alt=""></a>
+                <a href=""><img src="pics/youtube-icon.svg" alt=""></a>
+                <a href=""><img src="pics/tiktok-icon.svg" alt=""></a>
+                <a href=""><img src="pics/x-icon.svg" alt=""></a>
+                <a href=""><img src="pics/twitch-icon.svg" alt=""></a>
+            </ul>
             <hr>
-                <div class="col footer-foot">
+                <div class="col" id="footer-foot">
                     <ul class="row">
                         <li><a href="">Privacy</a></li>
                         <li><a href="">Terms</a></li>
