--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">Nemesis</a></li>
-                            <li><a href="#">Black Widow</a></li>
+                            <li><a href="#">NEMESIS</a></li>
+                            <li><a href="#">BLACK WIDOW</a></li>
                         </ul>
                     </li>
                     <li>
                         <button aria-haspopup="true" class="no-button">ABOUT US</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">Our Story</a></li>
-                            <li><a href="#">Press</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">OUR STORY</a></li>
+                            <li><a href="#">PRESS</a></li>
+                            <li><a href="#">CONTACT US</a></li>
                         </ul>
                     </li>
                     <li>
                         <button aria-haspopup="true" class="no-button">CUSTOMIZE</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">Nemesis</a></li>
-                            <li><a href="#">Black Widow</a></li>
+                            <li><a href="#">NEMESIS</a></li>
+                            <li><a href="#">BLACK WIDOW</a></li>
                         </ul> 
                     </li>
                     <li><a href="#"aria-haspopup="true">SHOP</a></li>
@@ -98,7 +98,7 @@
                     </form>
                 </section>
             </div>
-            <ul id="connections" class="row">
+            <ul class="row connections">
                 <a href=""><img src="pics/facebook-icon.svg" alt=""></a>
                 <a href=""><img src="pics/instagram-icon.svg" alt=""></a>
                 <a href=""><img src="pics/linkedin-icon.svg" alt=""></a>
