Began burger menu
Co-authored-by: BereniceBLR <BereniceBLR@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <header>
             <nav class="row">
                 <a class="navlogo img" href="index.html" aria-label="company logo"></a>
-                <ul class="row">
+                <label for="burger-cb" id="menu-burger" class="img" tabindex="1"></label>
+                <input type="checkbox" id="burger-cb" class="hidden">
+                
+                <ul class="row" id="nav-list">
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
