Burger menu complete

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <header>
             <nav class="row">
                 <a class="navlogo img" href="index.html" aria-label="company logo"></a>
-                <label for="burger-cb" id="menu-burger" class="img" tabindex="1"></label>
-                <input type="checkbox" id="burger-cb" class="hidden">
+                <label for="burger-cb" id="menu-burger" class="img"></label>
+                <input type="checkbox" id="burger-cb" tabindex="1">
                 
                 <ul class="row" id="nav-list">
                     <li>
@@ -102,13 +102,13 @@
                 </section>
             </div>
             <ul class="row connections">
-                <a href=""><img src="pics/facebook-icon.svg" alt=""></a>
-                <a href=""><img src="pics/instagram-icon.svg" alt=""></a>
-                <a href=""><img src="pics/linkedin-icon.svg" alt=""></a>
-                <a href=""><img src="pics/youtube-icon.svg" alt=""></a>
-                <a href=""><img src="pics/tiktok-icon.svg" alt=""></a>
-                <a href=""><img src="pics/x-icon.svg" alt=""></a>
-                <a href=""><img src="pics/twitch-icon.svg" alt=""></a>
+                <li><a href=""><img src="pics/facebook-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/instagram-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/linkedin-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/youtube-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/tiktok-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/x-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/twitch-icon.svg" alt=""></a></li>
             </ul>
             <hr>
                 <div class="col" id="footer-foot">
