--- a/press.html
+++ b/press.html
@@ -9,7 +9,10 @@
         <header>
             <nav class="row">
                 <a class="navlogo img" href="index.html" aria-label="company logo"></a>
-                <ul class="row">
+                <label for="burger-cb" id="menu-burger" class="img"></label>
+                <input type="checkbox" id="burger-cb" tabindex="1">
+                
+                <ul class="row" id="nav-list">
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
@@ -94,13 +97,13 @@
                 </section>
             </div>
             <ul class="row connections">
-                <a href=""><img src="pics/facebook-icon.svg" alt=""></a>
-                <a href=""><img src="pics/instagram-icon.svg" alt=""></a>
-                <a href=""><img src="pics/linkedin-icon.svg" alt=""></a>
-                <a href=""><img src="pics/youtube-icon.svg" alt=""></a>
-                <a href=""><img src="pics/tiktok-icon.svg" alt=""></a>
-                <a href=""><img src="pics/x-icon.svg" alt=""></a>
-                <a href=""><img src="pics/twitch-icon.svg" alt=""></a>
+                <li><a href=""><img src="pics/facebook-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/instagram-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/linkedin-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/youtube-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/tiktok-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/x-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/twitch-icon.svg" alt=""></a></li>
             </ul>
             <hr>
                 <div class="col" id="footer-foot">
