--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@
                     <p>© 2024-2025, Trion Supercars</p>
                 </div>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
