--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
             </nav>
         </header>
         <section id="hero" class="parallax">
-            <article>
-
+            <article class="col justify-end align-center">
+                <h1>NEMESIS</h1>
+                <p>LUXURY. SPEED. SUSTAINABILITY.</p>
+                <a href="" class="button">MORE DETAILS</a>
             </article>
         </section>
         <main>
