--- a/press.html
+++ b/press.html
@@ -51,9 +51,6 @@
             </nav>
         </header>
         <section id="hero-press" class="parallax">
-            <article>
-
-            </article>
         </section>
         <main>
             <div class="card-grid">
@@ -67,56 +64,78 @@
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
             </div>    
