--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <link rel="stylesheet" href="app.css">
         <title>Document</title>
     </head>
-    <body>
+    <body id="home">
         <header>
             <nav class="row">
-                <a class="navlogo img" href="index.html" aria-label="company logo"></a>
+                <a class="navlogo img" href="index.html" aria-label="company logo"><h1>TRION</h1></a>
                 <label for="burger-cb" id="menu-burger" class="img"></label>
                 <input type="checkbox" id="burger-cb" tabindex="1">
                 
@@ -50,9 +50,9 @@
                 </div>
             </nav>
         </header>
-        <section id="hero" class="parallax">
+        <section class="hero parallax">
             <article class="col justify-end align-center">
-                <h1>NEMESIS</h1>
+                <h2>NEMESIS</h2>
                 <p>LUXURY. SPEED. SUSTAINABILITY.</p>
                 <a href="" class="button">MORE DETAILS</a>
             </article>
@@ -77,7 +77,7 @@
                     </ul>
                 </nav>
                 <section id="footer-contact">
-                    <h2>CONTACT US</h2>
+                    <h3>CONTACT US</h3>
                     <form class="row wrap">
                         <div>
                             <label for="f-name">FIRST NAME</label>
