--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <nav class="row">
                 <a class="navlogo img" href="index.html" aria-label="company logo"><h1>TRION</h1></a>
                 <label for="burger-cb" id="menu-burger" class="img"></label>
-                <input type="checkbox" id="burger-cb" tabindex="1">
+                <input type="checkbox" id="burger-cb" tabindex="0">
                 
                 <ul class="row" id="nav-list">
                     <li>
@@ -50,12 +50,21 @@
                 </div>
             </nav>
         </header>
-        <section class="hero parallax">
-            <article class="col justify-end align-center">
-                <h2>NEMESIS</h2>
-                <p>LUXURY. SPEED. SUSTAINABILITY.</p>
-                <a href="" class="button">MORE DETAILS</a>
-            </article>
+        <section role="hero" class="row">
+            <div class="hero parallax carousel">
+                <article class="col justify-end align-center">
+                    <h2>NEMESIS</h2>
+                    <p>LUXURY. SPEED. SUSTAINABILITY.</p>
+                    <a href="" class="button">MORE DETAILS</a>
+                </article>
+            </div>
+            <div class="hero parallax carousel">
+                <article class="col justify-end align-center">
+                    <h2>BLACK WIDOW</h2>
+                    <p>LUXURY. SPEED. SUSTAINABILITY.</p>
+                    <a href="" class="button">MORE DETAILS</a>
+                </article>
+            </div>
         </section>
         <main>
 
@@ -104,13 +113,13 @@
                 </section>
             </div>
             <ul class="row connections">
-                <li><a href=""><img src="pics/facebook-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/instagram-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/linkedin-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/youtube-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/tiktok-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/x-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/twitch-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/facebook-icon.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="pics/instagram-icon.svg" alt="instagram"></a></li>
+                <li><a href=""><img src="pics/linkedin-icon.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="pics/youtube-icon.svg" alt="youtube"></a></li>
+                <li><a href=""><img src="pics/tiktok-icon.svg" alt="tiktok"></a></li>
+                <li><a href=""><img src="pics/x-icon.svg" alt="x"></a></li>
+                <li><a href=""><img src="pics/twitch-icon.svg" alt="twitch"></a></li>
             </ul>
             <hr>
                 <div class="col" id="footer-foot">
