--- a/our-story.html
+++ b/our-story.html
@@ -53,62 +53,79 @@
         <section id="hero-our-story" class="parallax">
         </section>
         <main>
-            <img src="pics/account-icon.jpg" alt="photo" width="763px" height="879px">
+            <div class="about-icon">
+            <img src="pics/account-icon.jpg" alt="photo">
+            </div>
+            <p>Richard Patterson</p>
+            <br>
+            <p>Richard Patterson (Rich), CEO & CTO of Trion Supercars, realized a lifelong dream in May 2012 after 40 years in the automotive industry by founding Trion with a core team of experts.</p>
+            <br>
+            <p>Rich’s passion for cars started in his Detroit childhood, and at 15, he earned a GM apprenticeship after winning a statewide drafting contest. A graduate of Mumford High School and Hall of Fame inductee, Rich began his career as a CAD designer at Modern Engineering, quickly rising to leadership roles due to his expertise in automotive interior systems.</p>
+            <br>  ​
+            <p>With over two decades of experience, including contributions to Chrysler's Stow 'n Go seating system, Rich moved to the West Coast to immerse himself in design innovation. Today, he brings his vision to life with Trion Supercars, offering high-performance American-made supercars that combine style, speeds of 300 mph, and comfort, with options ranging from traditional engines to hybrid and fully electric models.</p>
             <div class="card-grid">
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/account-icon.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                        <p>Chief Operating Officer</p>
+                        <br>
+                        <p>Brent Johnson</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/account-icon.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                        <p>CEA - Chief Executive Assistant</p>
+                        <br>
+                        <p>Nancy Patterson</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/account-icon.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                        <p>VP of Special Vehicle Operations</p>
+                        <br>
+                        <p>Quinton Dodson</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/account-icon.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                        <p>VP of Sales / Dealer Coordination</p>
+                        <br>
+                        <p>Kie Fair</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/account-icon.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                        <p>Chief Brand Ambassador</p>
+                        <br>
+                        <p>Romeo Miller</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/account-icon.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                        <p>Director of Special Programs</p>
+                        <br>
+                        <p>Warren Hollier</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/account-icon.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                        <p>CCO, Compliance Officer</p>
+                        <br>
+                        <p>Peter Dwars</p>
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/account-icon.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                        <p>VP of Business Development</p>
+                        <br>
+                        <p>DeMarcus Nelson</p>
                     </div>
                 </div>
             </div>    
