--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
-        <title>Document</title>
+        <title>Home | TRION</title>
+        <link rel="icon" type="image/x-icon" href="pics/trion-logo.png">
     </head>
     <body id="home">
         <header>
@@ -50,19 +51,19 @@
                 </div>
             </nav>
         </header>
-        <section role="hero" class="row">
-            <div class="hero parallax carousel">
+        <section role="hero" class="row carousel-container">
+            <div class="hero parallax carousel_2">
                 <article class="col justify-end align-center">
                     <h2>NEMESIS</h2>
                     <p>LUXURY. SPEED. SUSTAINABILITY.</p>
-                    <a href="" class="button">MORE DETAILS</a>
+                    <a href="#" class="button">MORE DETAILS</a>
                 </article>
             </div>
-            <div class="hero parallax carousel">
+            <div class="hero parallax carousel_2">
                 <article class="col justify-end align-center">
                     <h2>BLACK WIDOW</h2>
                     <p>LUXURY. SPEED. SUSTAINABILITY.</p>
-                    <a href="" class="button">MORE DETAILS</a>
+                    <a href="#" class="button">MORE DETAILS</a>
                 </article>
             </div>
         </section>
