--- a/index.html
+++ b/index.html
@@ -68,7 +68,26 @@
             </div>
         </section>
         <main>
-
+            <section class="full">
+                <img src="" alt="Car">
+                <h3>OUR VISION & FUTURE</h3>
+                <p>Trion Supercars envisions a future where cutting-edge electric technology meets unrivaled performance, pushing the boundaries of speed, sustainability, and innovation. Their mission is to revolutionize the automotive industry by creating all-electric supercars that offer world-class performance while maintaining a commitment to environmental responsibility.</p>
+            </section>
+            <section>
+                <img src="" alt="Car">
+                <h3></h3>
+                <p></p>
+            </section>
+            <section>
+                <img src="" alt="Car">
+                <h3></h3>
+                <p></p>
+            </section>
+            <section>
+                <img src="" alt="Car">
+                <h3></h3>
+                <p></p>
+            </section>
         </main>
         <footer>
             <div>
@@ -114,13 +133,13 @@
                 </section>
             </div>
             <ul class="row connections">
-                <li><a href=""><img src="pics/facebook-icon.svg" alt="facebook"></a></li>
-                <li><a href=""><img src="pics/instagram-icon.svg" alt="instagram"></a></li>
-                <li><a href=""><img src="pics/linkedin-icon.svg" alt="linkedin"></a></li>
-                <li><a href=""><img src="pics/youtube-icon.svg" alt="youtube"></a></li>
-                <li><a href=""><img src="pics/tiktok-icon.svg" alt="tiktok"></a></li>
-                <li><a href=""><img src="pics/x-icon.svg" alt="x"></a></li>
-                <li><a href=""><img src="pics/twitch-icon.svg" alt="twitch"></a></li>
+                <li><a href=""><img src="pics/icons/facebook-icon.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="pics/icons/instagram-icon.svg" alt="instagram"></a></li>
+                <li><a href=""><img src="pics/icons/linkedin-icon.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="pics/icons/youtube-icon.svg" alt="youtube"></a></li>
+                <li><a href=""><img src="pics/icons/tiktok-icon.svg" alt="tiktok"></a></li>
+                <li><a href=""><img src="pics/icons/x-icon.svg" alt="x"></a></li>
+                <li><a href=""><img src="pics/icons/twitch-icon.svg" alt="twitch"></a></li>
             </ul>
             <hr>
                 <div class="col" id="footer-foot">
