--- a/our-story.html
+++ b/our-story.html
@@ -63,13 +63,13 @@
                 <p>With over two decades of experience, including contributions to Chrysler's Stow 'n Go seating system, Rich moved to the West Coast to immerse himself in design innovation. Today, he brings his vision to life with Trion Supercars, offering high-performance American-made supercars that combine style, speeds of 300 mph, and comfort, with options ranging from traditional engines to hybrid and fully electric models.</p>
                 </div>
             <div class="about-icon">
-            <img src="pics/account-icon.jpg" alt="photo">
+            <img src="pics/icons/no-photo.jpg" alt="photo">
             </div>
 
             <div class="card-grid">
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/account-icon.jpg" alt="photo">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>Chief Operating Officer</p>
                         <br>
                         <p>Brent Johnson</p>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/account-icon.jpg" alt="photo">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>CEA - Chief Executive Assistant</p>
                         <br>
                         <p>Nancy Patterson</p>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/account-icon.jpg" alt="photo">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>VP of Special Vehicle Operations</p>
                         <br>
                         <p>Quinton Dodson</p>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/account-icon.jpg" alt="photo">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>VP of Sales / Dealer Coordination</p>
                         <br>
                         <p>Kie Fair</p>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/account-icon.jpg" alt="photo">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>Chief Brand Ambassador</p>
                         <br>
                         <p>Romeo Miller</p>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/account-icon.jpg" alt="photo">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>Director of Special Programs</p>
                         <br>
                         <p>Warren Hollier</p>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/account-icon.jpg" alt="photo">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>CCO, Compliance Officer</p>
                         <br>
                         <p>Peter Dwars</p>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/account-icon.jpg" alt="photo">
+                        <img src="pics/icons/no-photo.jpg" alt="photo">
                         <p>VP of Business Development</p>
                         <br>
                         <p>DeMarcus Nelson</p>
