--- a/contact-us.html
+++ b/contact-us.html
@@ -53,7 +53,7 @@
         <main>
             <div id="contact-us-main" class="row wrap">
                 <section id="footer-contact">
-                    <h2>CONTACT US</h2>
+                    <div class="h2-contact"><h2>CONTACT US</h2></div>
                     <form class="row wrap">
                         <div>
                             <label for="f-name">FIRST NAME</label>
@@ -75,12 +75,19 @@
                             <label for="message">MESSAGE*</label>
                             <textarea id="message" placeholder="MESSAGE" required></textarea>
                         </div>
-                        <button type="submit" class="button">SUBMIT</button>
-                        <p>For questions, technical assistance, or collaboration opportunities via the contact information provided.</p>
-                                          
+                        <button type="submit" class="button">SUBMIT</button>                  
                     </form>
                 </section>
             </div>
+            <div class="contact-info">
+            <p>For questions, technical assistance, or collaboration opportunities via the contact information provided.</p>
+            <br>
+            <p>(123) 456-7890</p>
+            <br>
+            <p>123 Anywhere St., Any City, ST 12345</p>
+            <br>
+            <p>hello@reallygreatsite.com</p>
+        </div>
         </main>
         <footer>
         </footer>
