--- a/index.html
+++ b/index.html
@@ -54,24 +54,25 @@
         <section role="hero" class="row carousel-container">
             <div class="hero parallax carousel_2">
                 <article class="col justify-end align-center">
-                    <h2>NEMESIS</h2>
+                    <h2 class="shaded">NEMESIS</h2>
                     <p>LUXURY. SPEED. SUSTAINABILITY.</p>
                     <a href="#" class="button">MORE DETAILS</a>
                 </article>
             </div>
             <div class="hero parallax carousel_2">
                 <article class="col justify-end align-center">
-                    <h2>BLACK WIDOW</h2>
+                    <h2 class="shaded">BLACK WIDOW</h2>
                     <p>LUXURY. SPEED. SUSTAINABILITY.</p>
                     <a href="#" class="button">MORE DETAILS</a>
                 </article>
             </div>
         </section>
         <main>
-            <section class="full">
-                <img src="" alt="Car">
-                <h3>OUR VISION & FUTURE</h3>
-                <p>Trion Supercars envisions a future where cutting-edge electric technology meets unrivaled performance, pushing the boundaries of speed, sustainability, and innovation. Their mission is to revolutionize the automotive industry by creating all-electric supercars that offer world-class performance while maintaining a commitment to environmental responsibility.</p>
+            <section class="full img col">
+                <div class="text-wrapper shaded">
+                    <h3 class="shaded">OUR VISION & FUTURE</h3>
+                    <p>Trion Supercars envisions a future where cutting-edge electric technology meets unrivaled performance, pushing the boundaries of speed, sustainability, and innovation. Their mission is to revolutionize the automotive industry by creating all-electric supercars that offer world-class performance while maintaining a commitment to environmental responsibility.</p>
+                </div>
             </section>
             <section>
                 <img src="" alt="Car">
