home page continued

--- a/index.html
+++ b/index.html
@@ -74,18 +74,22 @@
                     <p>Trion Supercars envisions a future where cutting-edge electric technology meets unrivaled performance, pushing the boundaries of speed, sustainability, and innovation. Their mission is to revolutionize the automotive industry by creating all-electric supercars that offer world-class performance while maintaining a commitment to environmental responsibility.</p>
                 </div>
             </section>
-            <section>
-                <img src="" alt="Car">
-                <h3></h3>
-                <p></p>
+            <section class="slanted img img-left">
+                <img src="pics/people/team-1.avif" alt="Trion Team">
+                <div class="text-wrapper col">
+                    <h3><span>OUR TEAM, </span><span>YOUR FUTURE</span></h3>
+                    <p>Innovating Electric Transportation
+                        Collaborating with our team and technical schools to bring this vision to life.</p>
+                    <a href="#" class="button">LEARN MORE</a>
+                </div>
+            </section>
+            <section class="full img col">
+                <div class="text-wrapper shaded">
+                    <h3 class="shaded">TOP PERFORMANCE</h3>
+                    <p>Trion Supercars designs its vehicles with a focus on aligning each model with user preferences and real-world needs. From the initial concept to the final testing stages, the company integrates insights that shape design choices, technological features, and performance capabilities.</p>
+                </div>
             </section>
             <section>
-                <img src="" alt="Car">
-                <h3></h3>
-                <p></p>
-            </section>
-            <section>
-                <img src="" alt="Car">
                 <h3></h3>
                 <p></p>
             </section>
