--- a/customize.html
+++ b/customize.html
@@ -6,16 +6,28 @@
         <title>Document</title>
     </head>
     <body>
+        <div class="customize-page">
         <header>
     
         </header>
         <main>
-            <div class="customize-page">
-                <img src="pics/icons/trion-logo.png" width="155px" height="156px"></div>   
-                <h2>TRION</h2>
-                <img src="pics/cars/7_25-Lux-Black-Nemesis_side-1024x575.png" width="1024px" height="automotive">
+            <div class="x-icon">
+            <a class="x-icon" href="index.html" title="account"></a>
+            </div>
+            <div class="customize-p">
+            <li><a href="account.html">SAVE</a></li>
+            </div>
+            <div class="customize-img">
+            <img src="pics/icons/trion-logo.png" width="155px" height="156px"></div>
+            <div class="customize-h2">
+            <h2>TRION</h2> 
+            </div>
+            <div class="customize-car-img">
+            <img src="pics/cars/7_25-Lux-Black-Nemesis_side-1024x575.png" width="1024px" height="automotive">
+            </div>
         </main>
         <footer>
         </footer>
+    </div>
     </body>
 </html>
