--- a/our-story.html
+++ b/our-story.html
@@ -62,10 +62,9 @@
                 <br>  ​
                 <p>With over two decades of experience, including contributions to Chrysler's Stow 'n Go seating system, Rich moved to the West Coast to immerse himself in design innovation. Today, he brings his vision to life with Trion Supercars, offering high-performance American-made supercars that combine style, speeds of 300 mph, and comfort, with options ranging from traditional engines to hybrid and fully electric models.</p>
                 </div>
-            <div class="about-icon">
-            <img src="pics/icons/no-photo.jpg" alt="photo">
-            </div>
-
+                <div class="rich-img">
+            <img src="pics/icons/account-icon.jpg" alt="Richard Patterson">
+                </div>
             <div class="card-grid">
                 <div class="card-container">
                     <div class="card">
