--- a/customize.html
+++ b/customize.html
@@ -12,7 +12,7 @@
         </header>
         <main>
             <div class="x-icon">
-            <a class="x-icon" href="index.html" title="account"></a>
+            <a class="x-icon" href="index.html" title="x"></a>
             </div>
             <div class="customize-p">
             <li><a href="account.html">SAVE</a></li>
