--- a/our-story.html
+++ b/our-story.html
@@ -66,6 +66,7 @@
             <img src="pics/icons/account-icon.jpg" alt="Richard Patterson">
                 </div>
             <div class="card-grid">
+                <div class="first-4">
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/icons/no-photo.jpg" alt="photo">
@@ -98,6 +99,8 @@
                         <p>Kie Fair</p>
                     </div>
                 </div>
+                </div>
+                <div class="first-4">
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/icons/no-photo.jpg" alt="photo">
@@ -129,6 +132,7 @@
                         <br>
                         <p>DeMarcus Nelson</p>
                     </div>
+                </div>
                 </div>
             </div>    
         </main>
