--- a/press.html
+++ b/press.html
@@ -54,6 +54,7 @@
         </section>
         <main>
             <div class="card-grid">
+                <div class="first-4">
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
@@ -75,6 +76,8 @@
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
+                </div>
+                <div class="first-4">
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
@@ -96,6 +99,8 @@
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
+                </div>
+                <div class="first-4">
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
@@ -116,7 +121,9 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
+                    </div>
                 </div>
+                <div class="first-4">
                 <div class="card-container">
                     <div class="card">
                         <img src="pics/no-photo.jpg" alt="photo">
@@ -136,6 +143,7 @@
                         <img src="pics/no-photo.jpg" alt="photo">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
                     </div>
                 </div>
             </div>    
